objects/ASI_CRM_Pass_Order__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pass Orders</relationshipLabel>
        <relationshipName>Pass_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Pass Orders</relationshipLabel>
        <relationshipName>Pass_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group_Code__c</fullName>
        <formula>ASI_CRM_Item_Group__r.ASI_MFM_Item_Group_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Pass Orders</relationshipLabel>
        <relationshipName>Pass_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Image__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_TH_CRM_OutletImage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity_Btl_Box__c</fullName>
        <label>Quantity (Btl/Box)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Potential__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_Sales_Potential__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Potential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Key Account (TW), Outlet (TW), Wholesaler (TW)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW Pass Order</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW Pass Order</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pass Orders (Supplier)</relationshipLabel>
        <relationshipName>Pass_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visitation_Plan_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitation Plan Detail</label>
        <referenceTo>ASI_HK_CRM_Visitation_Plan_Detail__c</referenceTo>
        <relationshipLabel>Pass Orders</relationshipLabel>
        <relationshipName>Pass_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pass Order</label>
    <listViews>
        <fullName>ASI_CRM_TW_Pass_Order</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Visitation_Plan_Detail__c</columns>
        <columns>ASI_CRM_Account__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_Supplier__c</columns>
        <columns>ASI_CRM_Quantity_Btl_Box__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pass_Order__c.ASI_CRM_TW_Pass_Order</value>
        </filters>
        <label>TW Pass Order</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{00000000}</displayFormat>
        <label>Pass Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pass Orders</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Pass_Order</fullName>
        <active>true</active>
        <label>ASI CRM TW Pass Order</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>